--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,16 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+body, .navbar {
+  background: #34e89e;  /* fallback for old browsers */  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(#0f3443, #34e89e);
+  background: -moz-linear-gradient(#0f3443, #34e89e);
+  background: -o-linear-gradient(#0f3443, #34e89e);
+  background: linear-gradient(to right, #0f3443, #34e89e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {border:none}
+
 
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
