--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,11 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-body, .navbar {
+h1, h2, h3 {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.navbar, .home-callout {
   background: #34e89e;  /* fallback for old browsers */  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-linear-gradient(#0f3443, #34e89e);
   background: -moz-linear-gradient(#0f3443, #34e89e);
@@ -27,7 +31,9 @@ body, .navbar {
 
 .navbar {border:none}
 
-
-h1, h2, h3 {
-  font-family: 'Open Sans', sans-serif;
+.home-callout {
+  color: white;
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
