--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,7 @@ h1, h2, h3 {
 }
 
 .navbar, .home-callout {
+  /* Gradient provided by @_ighosh at uiGradients.com */
   background: #34e89e;  /* fallback for old browsers */  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-linear-gradient(#0f3443, #34e89e);
   background: -moz-linear-gradient(#0f3443, #34e89e);
@@ -30,6 +31,22 @@ h1, h2, h3 {
 }
 
 .navbar {border:none}
+
+.navbar-default .navbar-brand {
+  color:#fff;
+}
+.navbar-default .navbar-nav > li > a {
+  color:#fff;
+}
+.navbar-default .navbar-brand:hover {
+  color: white;
+  opacity: 0.75;
+}
+.navbar-default .navbar-nav > li > a:hover {
+  color: white;
+  opacity: 0.75;
+}
+
 
 .home-callout {
   color: white;
