--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,9 @@ h1, h2, h3 {
 .navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a   {
   color:#fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+
   &:hover {
     color:#fff;
     opacity: 0.75;
